tests/ui/deny_missing_docs.stderr
error: missing documentation for a struct
  --> $DIR/deny_missing_docs.rs:11:5
   |
11 |     pub struct UndocumentedStruct {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: the lint level is defined here
  --> $DIR/deny_missing_docs.rs:6:9
   |
6  | #![deny(missing_docs)]
   |         ^^^^^^^^^^^^

error: missing documentation for a struct field
  --> $DIR/deny_missing_docs.rs:12:9
   |
12 |         pub undocumented_field: u8,
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^

error: missing documentation for a struct
  --> $DIR/deny_missing_docs.rs:21:5
   |
21 |     pub enum UndocumentedEnum {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: missing documentation for an associated constant
  --> $DIR/deny_missing_docs.rs:22:9
   |
22 |         UndocumentedVariant = 0,
   |         ^^^^^^^^^^^^^^^^^^^

error: missing documentation for a struct
  --> $DIR/deny_missing_docs.rs:44:9
   |
44 |         pub type UndocumentedForeignType;
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: missing documentation for a type alias
 --> $DIR/deny_missing_docs.rs:9:1
  |
9 | #[cxx::bridge]
  | ^^^^^^^^^^^^^^
  |
  = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: missing documentation for a function
 --> $DIR/deny_missing_docs.rs:9:1
  |
9 | #[cxx::bridge]
  | ^^^^^^^^^^^^^^
  |
  = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)
